--- a/packages/ts-geopro/tsconfig.json
+++ b/packages/ts-geopro/tsconfig.json
@@ -5,6 +5,6 @@
     "noEmit": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["src"],
+  "include": ["./src"],
   "exclude": ["*.test.ts"]
 }
