--- a/packages/ts-geopro/package.json
+++ b/packages/ts-geopro/package.json
@@ -17,7 +17,9 @@
     "build": "tsc && rimraf dist && vite build",
     "preview": "vite preview",
     "test": "vitest run --coverage",
-    "watch:test": "vitest watch"
+    "watch:test": "vitest watch",
+    "jsr:publish": "pnpm dlx jsr publish",
+    "lint": "deno lint -c ./deno.lint.json --fix"
   },
   "devDependencies": {
     "@types/node": "^20.17.16",
