Add test coverage thresholds

--- a/packages/ts-geopro/package.json
+++ b/packages/ts-geopro/package.json
@@ -19,6 +19,7 @@
     "test": "vitest run --coverage",
     "watch:test": "vitest watch",
     "jsr:publish": "pnpm dlx jsr publish",
+    "jsr-test-publish": "pnpm dlx jsr publish --dry-run --allow-dirty",
     "lint": "deno lint -c ./deno.lint.json --fix"
   },
   "devDependencies": {
