--- a/apps/cli-demos/package.json
+++ b/apps/cli-demos/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cli-demos",
   "dependencies": {
-    "@micurs/ts-geopro": "workspace/*"
+    "@micurs/ts-geopro": "workspace:*"
   }
 }
