--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 	"scripts": {
 		"dev": "turbo run dev",
 		"build": "turbo run build",
-		"test": "turbo run test"
+		"test": "turbo run test",
+		"cli-demos": "deno apps/cli-demos/point-vector.ts"
 	},
 	"packageManager": "pnpm@10.2.0"
 }
