--- a/packages/ts-geopro/package.json
+++ b/packages/ts-geopro/package.json
@@ -3,15 +3,9 @@
   "private": true,
   "version": "0.0.4",
   "type": "module",
-  "main": "./dist/index.umd.cjs",
+  "main": "./dist/index.js",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "require": "./dist/index.umd.cjs"
-    }
-  },
   "scripts": {
     "dev": "vite build --watch",
     "build": "tsc && rimraf dist && vite build",
