--- a/turbo.json
+++ b/turbo.json
@@ -1,12 +1,20 @@
 {
+  "ui": "tui",
   "tasks": {
     "test": {
-      "dependsOn": ["build", "^test"],
+      "dependsOn": ["^lint", "build"],
       "outputs": ["tests-coverage/**"]
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
     },
     "build": {
       "dependsOn": ["^build"],
-      "outputs": ["dist/**"]
+      "outputs": ["dist/**"],
+      "cache": false
+    },
+    "dev": {
+      "persistent": true
     }
   }
 }
