micurs/scene-graph (#12)
# Canvas demo: Adds structure, scene rendering, & grid improvements.

This commit introduces a basic canvas demo structure with scene rendering capabilities.
It also includes improvements to grid step calculations and adds a position callback to track center point and zoom level changes.

## Changes

* HTML Structure: Modified index.html to include divs for canvas, command panel, zoom panel and an app bar for potential controls. Canvas is now within
* Scene Building: Added src/buildScene.ts to create a sample scene with rays originating from random points and directions.
* Scene Rendering: Added src/ts-geopro-canvas/render.ts to encapsulate scene rendering logic, allowing for different renderable entity types (points, rays, frames).
* Dependency Updates: Removed typescript and vite from apps/canvas-demo/package.json, assuming they are now managed at the workspace root.
* Grid Improvement: Refactored grid step calculation in src/ts-geopro-canvas/perfect-grid.ts using gridSteps variable.
* Position Callback: Added an optional position callback to src/ts-geopro-canvas/init.ts to track and display the center point and zoom level.
* Event Listener: Added pointer events listener on canvas to support modern mouse and touch interactions.

## Impact

* Behavioral changes: Introduction of scene rendering, zoom level display, and a more interactive panning/zooming experience through the use of pointer events
* Dependencies affected: The demo now depends on the buildScene and renderScene modules.  @micurs/ts-geopro dependency remains but typescript and vite dependencies for canvas-demo app moved to the root.
* Performance implications: The addition of scene rendering might have performance implications depending on the complexity and number of entities being rendered.

Co-authored-by: Michele Ursino <michele@micurs.com>
Reviewed-on: http://gitea.micurs.com/micurs/ts-geopro/pulls/12

--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "private": true,
   "devDependencies": {
     "@total-typescript/tsconfig": "^1.0.4",
-    "turbo": "^2.4.2"
+    "@types/node": "^22.15.29",
+    "turbo": "^2.5.4",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5",
+    "vite-plugin-dts": "^4.5.4"
   },
   "scripts": {
     "dev": "turbo run dev",
@@ -13,5 +17,5 @@
     "version-update": "deno --allow-read --allow-write --allow-env scripts/update-versions.ts patch",
     "lint": "turbo run lint"
   },
-  "packageManager": "pnpm@10.2.0"
+  "packageManager": "pnpm@10.11.1"
 }
