Add Quadretti app (#13)
# Adds quadretti app

This commit introduces a new Solid.js application called quadretti showcasing 2D canvas rendering using RoughJS and @micurs/ts-geopro.

## Changes

* Created a new quadretti app with Solid.js, TailwindCSS, and RoughJS.
* Added deno.json, index.html, package.json, postcss.config.js, src/App.tsx, src/canvas.module.css, src/canvas.tsx, src/canvas/*, src/ellipse.tsx, src/index.css, src/index.tsx, src/line.tsx, src/perfect-grid.tsx, src/rectangle.tsx, src/vite-env.d.ts, tailwind.config.js, and tsconfig* files for the new quadretti app.
* Modified apps/canvas-demo/package.json to rename the dev script to dev:c.
* Added getViewport to apps/canvas-demo/src/ts-geopro-canvas/utils.ts which calculates and returns a Viewport object, encapsulating canvas context, scaling factor, translation, and transformation matrix.
* Removed duplicated getViewport from apps/canvas-demo/src/ts-geopro-canvas/viewport.ts.

## Impact
* Introduced a new interactive canvas application, quadretti, with component-based rendering of geometric shapes.
* The dev script for canvas-demo is renamed, requiring a small change to existing workflows.
* The new quadretti app depends on solid-js, roughjs, @micurs/ts-geopro, and several dev dependencies like tailwindcss and vite-plugin-solid. Testing implications are primarily focused on the new application's components and rendering logic.

Co-authored-by: Michele Ursino <michele@micurs.com>
Reviewed-on: http://gitea.micurs.com/micurs/ts-geopro/pulls/13

--- a/apps/canvas-demo/package.json
+++ b/apps/canvas-demo/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.4",
   "type": "module",
   "scripts": {
-    "dev": "tsc && vite",
+    "dev:c": "tsc && vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
