Add projection in ts-geopro (#14)
# Adds a 3D projection demo and refactors ts-geopro for projection support.

This diff introduces a new demo application showcasing 3D projections and significantly refactors the ts-geopro library to include projection transformations and improve the efficiency of the transformation pipeline. The map and unMap methods now utilize the GeoMatrix interface, enabling broader transformation capabilities.

## Changes

Introduces apps/projection-demo, a new Vite-based application demonstrating 3D projection.  It includes index.html, package.json, TypeScript source files (src/cube.ts, src/draw.ts, src/main.ts, src/types.ts, src/vite-env.d.ts), and a CSS file (src/style.css).
Adds a Projection class in packages/ts-geopro/src/projection.ts to represent projection transformations (orthographic and perspective), including methods for application and inversion.
Refactors map and unMap methods in Point, UnitVector, Vector, and Frame classes within packages/ts-geopro to accept GeoMatrix instead of Transform, allowing for projection transformations.
Modifies Frame.lookAt in packages/ts-geopro/src/geo-entities/frame.ts to correct camera orientation.
Introduces compose overload to handle Projection
Adds invert() method to Projection

## Impact
The ts-geopro library now supports 3D projection, enabling more complex geometric operations.
Existing code using map and unMap with Transform should continue to work due to interface compatibility, but can now also accept Projection.
Performance improvements are expected due to the refactored transformation pipeline.
The new demo application provides a visual example of the projection capabilities.

Co-authored-by: Michele Ursino <michele@micurs.com>
Reviewed-on: http://gitea.micurs.com/micurs/ts-geopro/pulls/14

--- a/packages/ts-geopro/tsconfig.json
+++ b/packages/ts-geopro/tsconfig.json
@@ -3,7 +3,16 @@
   "compilerOptions": {
     "outDir": "dist",
     "noEmit": true,
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "exactOptionalPropertyTypes": true
   },
   "include": ["./src"],
   "exclude": ["*.test.ts"]
