Improves projection demo visuals and fixes scaling
Enhances the projection demo with visual tweaks, including adjusted polygon colors and border aesthetics.

Addresses a scaling issue by ensuring device pixel ratio is correctly calculated and applied during canvas resizing, which ensures correct sharpness on different displays.

Adds a new `dev:p` script for the projection demo.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "scripts": {
     "dev:c": "turbo run dev:c",
+    "dev:p": "turbo run dev:p",
     "dev:q": "turbo run dev:q",
     "build": "turbo run build",
     "test": "turbo run test",
