Feat: Add ts-geosolid-canvas dependency to quadretti (#28)
## Summary
- Add @micurs/ts-geosolid-canvas as workspace dependency to quadretti
- First step in migrating quadretti to use shared canvas library
- Both old and new code coexist - app still fully functional

## Test plan
- [x] pnpm install succeeds
- [x] Build passes (tsc + vite)
- [x] No breaking changes

Resolves #27

Co-authored-by: Michele Ursino <michele@micurs.com>
Reviewed-on: http://gitea.micurs.com:3000/micurs/ts-geopro/pulls/28

--- a/apps/quadretti/package.json
+++ b/apps/quadretti/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@micurs/ts-geopro": "workspace:*",
+    "@micurs/ts-geosolid-canvas": "workspace:*",
     "roughjs": "^4.6.6",
     "solid-js": "^1.9.6"
   },
