--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "private": true,
   "devDependencies": {
     "@total-typescript/tsconfig": "^1.0.4",
-    "@types/node": "^22.15.29",
-    "turbo": "^2.5.4",
+    "@types/node": "^24.10.0",
+    "turbo": "^2.6.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-plugin-dts": "^4.5.4"
@@ -19,7 +19,9 @@
     "test": "turbo run test",
     "cli-demos": "deno apps/cli-demos/point-vector.ts",
     "version-update": "deno --allow-read --allow-write --allow-env scripts/update-versions.ts patch",
-    "lint": "turbo run lint"
+    "lint": "turbo run lint",
+    "install-hooks": "sh scripts/install-hooks.sh",
+    "postinstall": "pnpm run install-hooks"
   },
   "packageManager": "pnpm@10.11.1"
 }
